--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "root",
+  "name": "test-publish",
   "private": false,
   "scripts": {
     "start": "lerna run dev:project01 --stream",
