--- a/packages/project01/package.json
+++ b/packages/project01/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "@rayplus/p1",
   "version": "0.0.1",
   "private": false,
   "scripts": {
@@ -71,5 +72,6 @@
   },
   "engines": {
     "node": ">=8.0.0"
-  }
+  },
+  "gitHead": "85c42164f1d9577513b3e6f38b1f4db4aa519c8b"
 }
