--- a/packages/project01/package.json
+++ b/packages/project01/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rayplus/p1",
+  "name": "rayplus_test_p1",
   "version": "0.0.4",
   "private": false,
   "scripts": {
@@ -73,5 +73,5 @@
   "engines": {
     "node": ">=8.0.0"
   },
-  "gitHead": "f0bc95f1d9395ce636b5acabfb8963fb40731926"
+  "gitHead": "7e4b0df913d804226ed681038dd17f90351ab6fd"
 }
