--- a/packages/project_fus/package.json
+++ b/packages/project_fus/package.json
@@ -72,5 +72,6 @@
     "lint-staged": "^11.0.0",
     "prettier": "2.1.2",
     "standard-version": "^9.3.0"
-  }
+  },
+  "gitHead": "ef1604a09005d54fd204c969cf2688818026b778"
 }
