--- a/package.json
+++ b/package.json
@@ -4,13 +4,24 @@
   "scripts": {
     "start": "lerna run dev:project01 --stream",
     "start:fu": "lerna run dev:fu --stream",
-    
     "ls": "lerna ls",
     "link": "lerna link convert",
     "publish": "lerna publish"
   },
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "lerna": "^4.0.0",
+    "@umijs/fabric": "^2.5.7",
+    "@umijs/plugin-esbuild": "^1.1.0",
+    "@umijs/preset-react": "^1.8.10",
+    "babel-loader": "^8.2.2",
+    "commitizen": "^4.2.4",
+    "cross-env": "^7.0.3",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.22.0",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
+    "react-dev-inspector": "^1.5.1",
+    "standard-version": "^9.3.0"
   },
   "workspaces": [
     "packages/*"
