--- a/packages/project01/package.json
+++ b/packages/project01/package.json
@@ -18,6 +18,7 @@
     "release": "standard-version"
   },
   "dependencies": {
+    "@umijs/fabric": "^2.6.2",
     "antd": "^3.19.5",
     "dva": "^2.6.0-beta.6",
     "js-cookie": "^2.2.1",
@@ -36,8 +37,9 @@
     "commitizen": "^4.2.4",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^2.1.0",
-    "eslint": "^5.4.0",
+    "eslint": "^7.28.0",
     "eslint-config-umi": "^1.4.0",
+    "eslint-import-resolver-lerna": "^2.0.0",
     "eslint-plugin-flowtype": "^2.50.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
