--- a/packages/a/package.json
+++ b/packages/a/package.json
@@ -24,11 +24,7 @@
     "url": "https://github.com/alexiusll/lerna_umi_demo/issues"
   },
   "gitHead": "61da8bb4bc624f52631ac7719ff58a95a71dfb41",
-  "dependencies": {
-    "@umijs/fabric": "^2.6.2"
-  },
-  "devDependencies": {
-    "eslint": "^7.28.0",
-    "eslint-import-resolver-lerna": "^2.0.0"
+  "peerDependencies": {
+    "react": "^17.0.2"
   }
 }
