--- a/package.json
+++ b/package.json
@@ -2,25 +2,36 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "start": "lerna run dev:project01 --stream",
+    "start": "yarn --cwd packages/project01 start",
     "start:fu": "lerna run dev:fu --stream",
     "ls": "lerna ls",
     "link": "lerna link convert",
     "publish": "lerna publish"
   },
   "devDependencies": {
-    "lerna": "^4.0.0",
-    "@umijs/fabric": "^2.5.7",
+    "@umijs/fabric": "^2.6.2",
     "@umijs/plugin-esbuild": "^1.1.0",
-    "@umijs/preset-react": "^1.8.10",
+    "@umijs/preset-react": "^1.8.12",
+    "babel-eslint": "^9.0.0",
     "babel-loader": "^8.2.2",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "commitizen": "^4.2.4",
-    "cross-env": "^7.0.3",
+    "cross-env": "^7.0.2",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^7.22.0",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1",
+    "eslint": "^7.8.1",
+    "eslint-config-umi": "^1.4.0",
+    "eslint-import-resolver-lerna": "^2.0.0",
+    "eslint-plugin-flowtype": "^2.50.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.11.1",
+    "lerna": "^4.0.0",
+    "lint-staged": "^11.0.0",
+    "prettier": "2.1.2",
+    "prop-types": "^15.7.2",
     "react-dev-inspector": "^1.5.1",
+    "react-test-renderer": "^16.7.0",
     "standard-version": "^9.3.0"
   },
   "workspaces": [
