--- a/lerna.json
+++ b/lerna.json
@@ -1,26 +1,16 @@
 {
-  "packages": [
-    "packages/*",
-    "platform/*"
-  ],
+  "packages": ["packages/*"],
   "useWorkspaces": true,
   "version": "0.0.9",
   "npmClient": "yarn",
   "command": {
     "publish": {
-      "ignoreChanges": [
-        "*.md",
-        "*.yml",
-        "*.spec.js",
-        "*.test.js"
-      ],
+      "ignoreChanges": ["*.md", "*.yml", "*.spec.js", "*.test.js"],
       "message": "chore(release): publish"
     },
     "bootstrap": {
       "ignore": "component-*",
-      "npmClientArgs": [
-        "--no-package-lock"
-      ]
+      "npmClientArgs": ["--no-package-lock"]
     }
   }
 }
