--- a/platform/mips-fontend/package.json
+++ b/platform/mips-fontend/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "@rayplus/mip-frontend",
-  "version": "0.0.9",
+  "name": "ris_front",
+  "version": "1.0.4",
   "private": true,
-  "publishConfig": {
-    "access": "public"
-  },
   "scripts": {
     "commit": "git-cz",
     "release": "standard-version",
-    "dev:mip": "npm run start:dev",
+    "dev": "npm run start:dev",
     "start": "cross-env REACT_APP_ENV=dev UMI_ENV=dev umi dev",
     "start:dev": "cross-env REACT_APP_ENV=dev UMI_ENV=dev MOCK=none umi dev",
     "start:prod": "cross-env REACT_APP_ENV=prod UMI_ENV=prod MOCK=none umi dev",
@@ -44,16 +41,19 @@
     "@ant-design/icons": "^4.5.0",
     "@ant-design/pro-layout": "^6.14.5",
     "@ant-design/pro-table": "^2.30.3",
+    "@kitware/vtk.js": "^18.4.0",
     "@types/js-cookie": "^2.2.6",
     "@umijs/openapi": "^1.1.17",
     "@umijs/plugin-openapi": "^1.3.0",
     "antd": "^4.13.0",
     "axios": "^0.21.1",
+    "axios-retry": "^3.1.9",
     "cornerstone-core": "^2.3.0",
     "cornerstone-math": "^0.1.9",
     "cornerstone-tools": "^5.1.3",
     "cornerstone-wado-image-loader": "^3.3.1",
     "cornerstone-web-image-loader": "^2.1.1",
+    "rayplus-my-button": "*",
     "hammerjs": "^2.0.8",
     "itk": "^14.1.1",
     "js-cookie": "^2.2.1",
@@ -72,7 +72,29 @@
     "vtk.js": "^18.2.0"
   },
   "devDependencies": {
-    "@umijs/preset-react": "^1.8.10"
+    "@umijs/fabric": "^2.5.7",
+    "@umijs/plugin-esbuild": "^1.1.0",
+    "@umijs/preset-react": "^1.8.10",
+    "babel-loader": "^8.2.2",
+    "commitizen": "^4.2.4",
+    "copy-webpack-plugin": "6",
+    "cross-env": "^7.0.3",
+    "css-loader": "5.2.1",
+    "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.22.0",
+    "lint-staged": "^10.5.4",
+    "postcss-loader": "3.0.0",
+    "prettier": "^2.2.1",
+    "raw-loader": "4.0.2",
+    "react-dev-inspector": "^1.5.1",
+    "standard-version": "^9.3.0",
+    "style-loader": "2.0.0",
+    "webpack": "5.31.2",
+    "webpack-cli": "4.6.0",
+    "webpack-dev-server": "3.11.2",
+    "webpack-merge": "5.7.3",
+    "worker-loader": "3.0.8",
+    "yorkie": "^2.0.0"
   },
   "engines": {
     "node": ">=10.0.0"
