--- a/packages/MyButton/package.json
+++ b/packages/MyButton/package.json
@@ -13,7 +13,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "webpack serve --config .webpack/webpack.config.js --mode development --env development",
-    "build": "webpack --config .webpack/webpack.config.js",
+    "build": "build:prod",
+    "build:dev": "webpack --config .webpack/webpack.config.js",
     "build:prod": "webpack --config .webpack/webpack.prod.js",
     "build:types": "tsc --emitDeclarationOnly",
     "compiler": "rollup -c"
